MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 0.3.2

* some serious bugs fixed (Tomcat 4.1.x issues)
* UIFileUpload with FileUploadRenderer and FileUploadTag
* added com.oreilly.servlet package cos.jar:
   - Base64 encoding instead of MimeUtility from mail.jar
   - MultiPartFilter for the new UIFileUpload
* removed mail.jar: was only needed for Base64-Encoding

----------------------------------------------------------------------
Changes in Release 0.3.1

* completely restructured directories
* revised documentation
* revised build files
* 4 different state-saving modes: see features.html for details

----------------------------------------------------------------------
Changes in Release 0.3.0

* This is a major release, that has lots of changes to make MyFaces
  conform to the new EA3 specification.
* UISortHeader with SortColumnRenderer (see features.html)
* LayoutRenderer (see features.html)

----------------------------------------------------------------------
Changes in Release 0.1.4

* tons of adds, changes and fixes to better conform to the specification.
* List- and GridRenderer, new sample pages

----------------------------------------------------------------------
Changes in Release 0.1.3

* new features
    - alternative servlet-mapping by file extension:
      Instead of mapping the FacesServlet with the virtual path
      "/faces/*", it's now possible to map the Servlet to "*.jsf".
      This new mapping is the default mapping method in this release.

----------------------------------------------------------------------
Changes in Release 0.1.2

* new features
    - detailed "Features" page

* cosmetic changes
    - imports optimized
    - MessageListRenderer moved to subpackage "ext"

* bug fixes:
    - state saving and restoring of "stringValue" Attribute fixed

----------------------------------------------------------------------
Changes in Release 0.1.1
