@@ -125,15 +125,4 @@ public class FileUploadTag
         setRendererAttribute(FileUploadRenderer.ACCEPT_ATTR, value);
     }
 
-    public void setMaxUploadSize(int maxSize)
-    {
-        setRendererAttribute(FileUploadRenderer.MAX_UPLOAD_SIZE_ATTR, new Integer(maxSize));
-    }
-
-    public void setContentTypeReference(String value)
-    {
-        setComponentAttribute(UIFileUpload.CONTENT_TYPE_REFERENCE_ATTR, value);
-    }
-
-
 }
