@@ -16,6 +16,7 @@ nav_Copyright       = Copyright
 nav_Options         = Einstellungen
 nav_Components      = Komponenten
 nav_Selectbox       = Selectboxen (CarConfigurator)
+nav_FileUpload      = Datei hochladen
 
 alt_logo = MyFaces - Die Opensource JSF Implementierung
 
