@@ -16,6 +16,7 @@ nav_Copyright       = Copyright
 nav_Options         = Options
 nav_Components      = Components
 nav_Selectbox       = Selectboxes (CarConfigurator)
+nav_FileUpload      = File upload
 
 
 alt_logo = MyFaces - the open source JSF implementation
