@@ -33,7 +33,7 @@
         * "FINEST", "FINER", "FINE", "INFO", "WARNING", "SEVERE"
         -->
         <param-name>logLevel</param-name>
-        <param-value>FINER</param-value>
+        <param-value>INFO</param-value>
     </context-param>
 
     <context-param>
@@ -118,37 +118,36 @@
     </context-param>
 
 
-    <!-- MyFaces Filter -->
+    <!-- Filter -->
     <!--
     <filter>
         <filter-name>MyFaces Filter</filter-name>
         <filter-class>net.sourceforge.myfaces.webapp.filter.MyFacesFilter</filter-class>
     </filter>
     -->
+    <!-- O'Reilly MultiPart Filter -->
+    <filter>
+        <filter-name>multipartFilter</filter-name>
+        <filter-class>com.oreilly.servlet.MultipartFilter</filter-class>
+        <!--
+        <init-param>
+            <param-name>uploadDir</param-name>
+            <param-value>/tmp</param-value>
+        </init-param>
+        -->
+    </filter>
 
-    <!-- MyFaces Filter Mapping -->
+    <!-- Filter Mappings -->
     <!--
     <filter-mapping>
         <filter-name>MyFaces Filter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     -->
-
-    <!-- O'Reilly MultiPart Filter -->
-    <!--
-    <filter>
-        <filter-name>multipartFilter</filter-name>
-        <filter-class>com.oreilly.servlet.MultipartFilter</filter-class>
-        <init-param>
-            <param-name>uploadDir</param-name>
-            <param-value>/tmp</param-value>
-        </init-param>
-    </filter>
     <filter-mapping>
         <filter-name>multipartFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    -->
 
 
 
