@@ -6,6 +6,7 @@ Changes in Release 0.3.2
 
 * some serious bugs fixed (Tomcat 4.1.x issues)
 * UIFileUpload with FileUploadRenderer and FileUploadTag
+* new "File upload" example
 * added com.oreilly.servlet package cos.jar:
    - Base64 encoding instead of MimeUtility from mail.jar
    - MultiPartFilter for the new UIFileUpload
